--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -31,8 +31,10 @@
 	<div class="row">
 
 		<div class="col-md-12">
-			<!-- Main Search Input -->
-      <%= render "shared/search_field" %>
+  			<div class="main-search-input margin-bottom-40">
+  				<input type="text" class="ico-01" placeholder="Type an agent name or location" value=""/>
+  				<button class="button">Search</button>
+  			</div>
 		</div>
 
 
