--- a/app/views/agents/new.html.erb
+++ b/app/views/agents/new.html.erb
@@ -57,7 +57,7 @@
 
         <div class="">
           <%= f.label :country %>
-          <select name="agency[country]" data-placeholder="Select Country" class="chosen-select", id="country" >
+          <select name="agent[country]" data-placeholder="Select Country" class="chosen-select", id="country" >
             <option value="">Select Country</option>
               <%= options_for_select(
                 CS.countries.invert
@@ -67,7 +67,7 @@
 
         <div class="">
           <%= f.label :state %>
-          <select name="agency[state]" data-placeholder="All States" class="chosen-select", id="state" >
+          <select name="agent[state]" data-placeholder="All States" class="chosen-select", id="state" >
             <option value="">All States</option>
 
           </select>
@@ -75,7 +75,7 @@
 
         <div class="">
           <%= f.label :city %>
-          <select name="agency[city]" data-placeholder="All Cities" class="chosen-select" id="city" >
+          <select name="agent[city]" data-placeholder="All Cities" class="chosen-select" id="city" >
             <option value="">All Cities</option>
 
           </select>
