--- a/app/views/classified_listings/index.html.erb
+++ b/app/views/classified_listings/index.html.erb
@@ -8,7 +8,7 @@
 				<div class="col-md-12">
 
 					<!-- Main Search Container -->
-					<%= render "properties/search_main" %>
+					<%= render "classified_listings/search_main" %>
 					<!-- Main Search Container / End -->
 
 				</div>
