--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -7,18 +7,18 @@
 				<%= link_to :back, class: "back-to-listings" do %>
         <% end %>
 				<div class="property-title">
-					<h2><%= @property.name %> <span class="property-badge">For Sale</span></h2>
+					<h2><%= @property.name %> <span class="property-badge"><%= @property.availability %></span></h2>
 					<span>
 						<a href="#location" class="listing-address">
 							<i class="fa fa-map-marker"></i>
-							<%#= @property.address %>
+							<%= @property.address %>
 						</a>
 					</span>
 				</div>
 
 				<div class="property-pricing">
 					<div class="property-price">$<%= @property.price %></div>
-					<div class="sub-price">$770 / sq ft</div>
+					<div class="sub-price">$<%= (@property.price / @property.area).round(2) %> / sq ft</div>
 				</div>
 
 
@@ -50,9 +50,9 @@
 
 				<!-- Main Features -->
 				<ul class="property-main-features">
-					<li>Area <span>1450 sq ft</span></li>
 					<li>Bedrooms <span><%= @property.bedrooms %></span></li>
 					<li>Bathrooms <span><%= @property.bathrooms %></span></li>
+          <li>Parkings <span><%= @property.parking %></span></li>
 				</ul>
 
 
@@ -61,14 +61,6 @@
 				<div class="show-more">
 					<p>
 						<%= @property.description %>
-					</p>
-
-					<p>
-						 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in pulvinar neque. Nulla finibus lobortis pulvinar. Donec a consectetur nulla. Nulla posuere sapien vitae lectus suscipit, et pulvinar nisi tincidunt. Aliquam erat volutpat. Curabitur convallis fringilla diam sed aliquam. Sed tempor iaculis massa faucibus feugiat. In fermentum facilisis massa, a consequat purus viverra a. Aliquam pellentesque nibh et nibh feugiat gravida. Maecenas ultricies, diam vitae semper placerat, velit risus accumsan nisl, eget tempor lacus est vel nunc. Proin accumsan elit sed neque euismod fringilla. Curabitur lobortis nunc velit, et fermentum urna dapibus non. Vivamus magna lorem, elementum id gravida ac, laoreet tristique augue. Maecenas dictum lacus eu nunc porttitor, ut hendrerit arcu efficitur.
-					</p>
-
-					<p>
-						Nam mattis lobortis felis eu blandit. Morbi tellus ligula, interdum sit amet ipsum et, viverra hendrerit lectus. Nunc efficitur sem vel est laoreet, sed bibendum eros viverra. Vestibulum finibus, ligula sed euismod tincidunt, lacus libero lobortis ligula, sit amet molestie ipsum purus ut tortor. Nunc varius, dui et sollicitudin facilisis, erat felis imperdiet felis, et iaculis dui magna vitae diam. Donec mattis diam nisl, quis ullamcorper enim malesuada non. Curabitur lobortis eu mauris nec vestibulum. Nam efficitur, ex ac semper malesuada, nisi odio consequat dui, hendrerit vulputate odio dui vitae massa. Aliquam tortor urna, tincidunt ut euismod quis, semper vel ipsum. Ut non vestibulum mauris. Morbi euismod, felis non hendrerit viverra, nunc sapien bibendum ligula, eget vehicula nunc dolor eu ex. Quisque in semper odio. Donec auctor blandit ligula. Integer id lectus non nibh vulputate efficitur quis at arcu.
 					</p>
 
 					<a href="#" class="show-more-button">Show More <i class="fa fa-angle-down"></i></a>
@@ -108,167 +100,13 @@
 				<!-- Video -->
 
 				<!-- Location -->
+        <!--
 				<h3 class="desc-headline no-border" id="location">Location</h3>
 				<div id="propertyMap-container">
 					<div id="propertyMap" data-latitude="40.7427837" data-longitude="-73.11445617675781"></div>
 					<a href="#" id="streetView">Street View</a>
 				</div>
-
-
-				<!-- Similar Listings Container -->
-				<h3 class="desc-headline no-border margin-bottom-35 margin-top-60">Similar Properties</h3>
-
-				<!-- Layout Switcher -->
-
-				<div class="layout-switcher hidden"><a href="#" class="list"><i class="fa fa-th-list"></i></a></div>
-				<div class="listings-container list-layout">
-
-					<!-- Listing Item -->
-					<div class="listing-item">
-
-						<a href="#" class="listing-img-container">
-
-							<div class="listing-badges">
-								<span>For Rent</span>
-							</div>
-
-							<div class="listing-img-content">
-								<span class="listing-price">$1700 <i>monthly</i></span>
-								<span class="like-icon"></span>
-							</div>
-
-							<img src="images/listing-03.jpg" alt="">
-
-						</a>
-						
-						<div class="listing-content">
-
-							<div class="listing-title">
-								<h4><a href="#">Meridian Villas</a></h4>
-								<a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&hl=en&t=v&hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="listing-address popup-gmaps">
-									<i class="fa fa-map-marker"></i>
-									778 Country St. Panama City, FL
-								</a>
-
-								<a href="#" class="details button border">Details</a>
-							</div>
-
-							<ul class="listing-details">
-								<li>1450 sq ft</li>
-								<li>1 Bedroom</li>
-								<li>2 Rooms</li>
-								<li>2 Rooms</li>
-							</ul>
-
-							<div class="listing-footer">
-								<a href="#"><i class="fa fa-user"></i> Chester Miller</a>
-								<span><i class="fa fa-calendar-o"></i> 4 days ago</span>
-							</div>
-
-						</div>
-						<!-- Listing Item / End -->
-
-					</div>
-					<!-- Listing Item / End -->
-
-
-					<!-- Listing Item -->
-					<div class="listing-item">
-
-						<a href="#" class="listing-img-container">
-
-							<div class="listing-badges">
-								<span>For Sale</span>
-							</div>
-
-							<div class="listing-img-content">
-								<span class="listing-price">$420,000 <i>$770 / sq ft</i></span>
-								<span class="like-icon"></span>
-							</div>
-
-							<div><img src="images/listing-04.jpg" alt=""></div>
-
-						</a>
-						
-						<div class="listing-content">
-
-							<div class="listing-title">
-								<h4><a href="#">Selway Apartments</a></h4>
-								<a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&hl=en&t=v&hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="listing-address popup-gmaps">
-									<i class="fa fa-map-marker"></i>
-									33 William St. Northbrook, IL
-								</a>
-
-								<a href="#" class="details button border">Details</a>
-							</div>
-
-							<ul class="listing-details">
-								<li>540 sq ft</li>
-								<li>1 Bedroom</li>
-								<li>3 Rooms</li>
-								<li>2 Bathroom</li>
-							</ul>
-
-							<div class="listing-footer">
-								<a href="#"><i class="fa fa-user"></i> Kristen Berry</a>
-								<span><i class="fa fa-calendar-o"></i> 3 days ago</span>
-							</div>
-
-						</div>
-						<!-- Listing Item / End -->
-
-					</div>
-					<!-- Listing Item / End -->
-
-
-					<!-- Listing Item -->
-					<div class="listing-item">
-
-						<a href="#" class="listing-img-container">
-							<div class="listing-badges">
-								<span>For Sale</span>
-							</div>
-
-							<div class="listing-img-content">
-								<span class="listing-price">$535,000 <i>$640 / sq ft</i></span>
-								<span class="like-icon"></span>
-							</div>
-
-							<img src="images/listing-05.jpg" alt="">
-						</a>
-						
-						<div class="listing-content">
-
-							<div class="listing-title">
-								<h4><a href="#">Oak Tree Villas</a></h4>
-								<a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&hl=en&t=v&hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="listing-address popup-gmaps">
-									<i class="fa fa-map-marker"></i>
-									71 Lower River Dr. Bronx, NY
-								</a>
-
-								<a href="#" class="details button border">Details</a>
-							</div>
-
-							<ul class="listing-details">
-								<li>350 sq ft</li>
-								<li>1 Bedroom</li>
-								<li>2 Rooms</li>
-								<li>1 Bathroom</li>
-							</ul>
-
-							<div class="listing-footer">
-								<a href="#"><i class="fa fa-user"></i> Mabel Gagnon</a>
-								<span><i class="fa fa-calendar-o"></i> 4 days ago</span>
-							</div>
-
-						</div>
-						<!-- Listing Item / End -->
-
-					</div>
-					<!-- Listing Item / End -->
-
-				</div>
-				<!-- Similar Listings Container / End -->
+          -->
 
 			</div>
 		</div>
@@ -281,9 +119,9 @@
 
 				<!-- Widget -->
 				<div class="widget margin-bottom-30">
+          <%= link_to property_path(@property), :onclick => 'window.print();return false;' do %>
 					<button class="widget-button with-tip" data-tip-content="Print"><i class="sl sl-icon-printer"></i></button>
-					<button class="widget-button with-tip" data-tip-content="Add to Bookmarks"><i class="fa fa-star-o"></i></button>
-					<button class="widget-button with-tip compare-widget-button" data-tip-content="Add to Compare"><i class="icon-compare"></i></button>
+          <% end %>
            <%= favourite_link(@property) %>
 					<div class="clearfix"></div>
 				</div>
@@ -294,12 +132,13 @@
 				<div class="widget">
 
 					<!-- Agent Widget -->
+         <% unless @property.agent.nil? %>
 					<div class="agent-widget">
 						<div class="agent-title">
 							<div class="agent-photo"><%= image_tag "agent-avatar.jpg" %></div>
 							<div class="agent-details">
-								<h4><a href="#">Jennie Wilson</a></h4>
-								<span><i class="sl sl-icon-call-in"></i>(123) 123-456</span>
+								<h4><%= link_to @property.agent.name, agent_path(@property.agent) %></h4>
+								<span><i class="sl sl-icon-call-in"></i><%= @property.agent.phone_number%></span>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -309,6 +148,7 @@
 						<textarea>I'm interested in this property [ID 123456] and I'd like to know more details.</textarea>
 						<button class="button fullwidth margin-top-5">Send Message</button>
 					</div>
+          <% end %>
 					<!-- Agent Widget / End -->
 
 				</div>
