--- a/app/views/agencies/_contact_form.html.erb
+++ b/app/views/agencies/_contact_form.html.erb
@@ -1,4 +1,4 @@
-<h3 class="margin-bottom-30 margin-top-30">Contact Us</h3>
+<h3 class="margin-bottom-30 margin-top-30">Email Agency</h3>
 <!-- Agent Widget -->
 <div class="agefnt-widget">
   <!-- _TODO ajaxify the form -->
