--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,50 +28,7 @@
     <header id="header-container">
 
     	<!-- Topbar -->
-    	<div id="top-bar">
-    		<div class="container">
 
-    			<!-- Left Side Content -->
-    			<div class="left-side">
-
-    				<!-- Top bar -->
-    				<ul class="top-bar-menu">
-    					<li><i class="fa fa-phone"></i> (123) 123-456 </li>
-    					<li><i class="fa fa-envelope"></i> <a href="#">office@example.com</a></li>
-    					<li>
-    						<div class="top-bar-dropdown">
-    							<span>Dropdown Menu</span>
-    							<ul class="options">
-    								<li><div class="arrow"></div></li>
-    								<li><a href="#">Nice First Link</a></li>
-    								<li><a href="#">Second Link With Long Title</a></li>
-    								<li><a href="#">Third Link</a></li>
-    							</ul>
-    						</div>
-    					</li>
-    				</ul>
-
-    			</div>
-    			<!-- Left Side Content / End -->
-
-
-    			<!-- Left Side Content -->
-    			<div class="right-side">
-
-    				<!-- Social Icons -->
-    				<ul class="social-icons">
-    					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-    					<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-    					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-    					<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-    				</ul>
-
-    			</div>
-    			<!-- Left Side Content / End -->
-
-    		</div>
-    	</div>
-    	<div class="clearfix"></div>
     	<!-- Topbar / End -->
 
 
@@ -100,15 +57,16 @@
     				<nav id="navigation" class="style-1">
     					<ul id="responsive">
 
-    						<li><a class="current" href="#">Buy</a></li>
+    						<li><%= link_to "Buy", root_path, class: cp(root_path) %></li>
 
     						<li><a href="#">Rent</a></li>
 
     						<li><a href="#">New homes</a></li>
                 <li><a href="#">Sold</a></li>
-                <li><a href="#">Agents</a></li>
+                <li><%= link_to "Agents", agents_path, class: cp(agents_path) %></li>
+                <li><%= link_to "Agencies", agencies_path, class: cp(agencies_path) %></li>
                 <li><a href="#">News & advice</a></li>
-    						<li><a href="#">Classifieds</a></li>
+    						<li><%= link_to "Classifieds", classified_listings_path, class: cp(classified_listings_path) %></li>
 
     					</ul>
     				</nav>
@@ -121,7 +79,7 @@
     			<!-- Right Side Content / End -->
     			<div class="right-side">
     				<!-- Header Widget -->
-    				<div class="header-widget">
+    				<div class="header-widget" style="margin-top: 10px;">
               <% if user_signed_in? %>
     					<!-- User Menu -->
     					<div class="user-menu">
