--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2><i class="fa fa-plus-circle"></i> Add Property</h2>
+				<h2><i class="fa fa-plus-circle"></i> Update Property</h2>
 			</div>
 		</div>
 	</div>
