--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,7 +4,7 @@
 
 		<ul class="my-account-nav">
 			<li class="sub-nav-title">Manage Account</li>
-			<li><a href="my-profile.html" class="current"><i class="sl sl-icon-user"></i> My Profile</a></li>
+			<li><%= link_to edit_user_registration_path(current_user) do %><i class="sl sl-icon-user"></i> My Profile <% end %></li>
 			<li><%= link_to bookmarked_listing_path do %><i class="sl sl-icon-star"></i> Bookmarked Listings <% end %></li>
 		</ul>
 
@@ -14,6 +14,10 @@
       <li><%= link_to subscriptions_path do %><i class="sl sl-icon-docs"></i> My Subscriptions<% end %></li>
       <li><%= link_to purchase_packages_path do %><i class="sl sl-icon-docs"></i> Property Packages<% end %></li>
 			<li><%= link_to new_property_path do %><i class="sl sl-icon-action-redo"></i> Submit New Property<% end %></li>
+		</ul>
+		<ul class="my-account-nav">
+			<li class="sub-nav-title">Manage Classified Listings</li>
+			<li><%= link_to new_classified_listing_path do %><i class="sl sl-icon-action-redo"></i> Submit New Classified<% end %></li>
 		</ul>
 
 		<ul class="my-account-nav">
