--- a/app/assets/theme/css/style.css
+++ b/app/assets/theme/css/style.css
@@ -2312,6 +2312,16 @@ a.adv-search-btn.active i.fa.fa-caret-up { transform: rotate(-540deg); }
 	height: 51px;
 }
 
+.search-button {
+	width: auto;
+	min-width: 120px !important;
+	margin: 0 !important;
+	position: relative;
+	margin-left: 20px !important;
+	flex: 0 auto !important;
+	height: 51px;
+}
+
 .larger-input button.button,
 .larger-input input {
 	height: 55px;
