--- a/app/views/agents/index.html.erb
+++ b/app/views/agents/index.html.erb
@@ -29,12 +29,18 @@
 ================================================== -->
 <div class="container">
 	<div class="row">
-
-		<div class="col-md-12">
-  			<div class="main-search-input margin-bottom-40">
-  				<input type="text" class="ico-01" placeholder="Type an agent name or location" value=""/>
-  				<button class="button">Search</button>
-  			</div>
+    <div class="col-md-12">      
+      <%= search_form_for @q do |f| %>
+        <div class="col-md-4">
+          <%= select_tag "sort_agent", options_for_select([ "Name (A to Z)", "Name (Z to A)" ], params["sort_agent"]) %>
+        </div>
+        <div class="col-md-6">
+          <%= f.search_field :name_or_city_or_state_or_country_cont, class: 'ico-01', placeholder: "Type an agent name or location" %>
+        </div>
+        <div class="col-md-2">
+          <%= f.submit "Search", class: "button search-button" %>
+        </div>
+      <% end %>
 		</div>
 
 
