--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -31,7 +31,7 @@
 		<div class="col-md-12">      
 			<%= search_form_for @q do |f| %>
 				<div class="col-md-4">
-					<%= select_tag "sort_agency", options_for_select([ "Name (A to Z)", "Name (Z to A)" ], params["sort_agency"]) %>
+					<%= select_tag "sort_agency", options_for_select([ "Name (A to Z)", "Name (Z to A)", "Most Properties for sale", "Most properties for rent" ], params["sort_agency"]), onchange: 'this.form.submit();' %>
 				</div>
 				<div class="col-md-6">
 					<%= f.search_field :name_or_city_or_state_or_country_cont, class: 'ico-01', placeholder: "Type an agency name or location" %>
